--- a/index.html
+++ b/index.html
@@ -132,16 +132,16 @@
                 </figure>
                 <ul>
                     <li>
-                        <a href="https://www.instagram.com"><img src="instagram.png" alt="instagram"></a>
+                        <a href="https://www.instagram.com"><img src="instagram.svg" alt="instagram"></a>
                     </li>
                     <li>
-                        <a href="https://twitter.com"><img src="twitter.png" alt="twitter"></a>
+                        <a href="https://twitter.com"><img src="twitter.svg" alt="twitter"></a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com"><img src="Facebook.png" alt="Facebook"></a>
+                        <a href="https://www.facebook.com"><img src="facebook.svg" alt="Facebook"></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com"><img src="Linkedin.png" alt="Linkedin"></a>
+                        <a href="https://www.linkedin.com"><img src="linkedin.svg" alt="Linkedin"></a>
                     </li>
                 </ul>
             </li>
@@ -152,16 +152,16 @@
                 </figure>
                 <ul>
                     <li>
-                        <a href="https://www.instagram.com"><img src="instagram.png" alt="instagram"></a>
+                        <a href="https://www.instagram.com"><img src="instagram.svg" alt="instagram"></a>
                     </li>
                     <li>
-                        <a href="https://twitter.com"><img src="twitter.png" alt="twitter"></a>
+                        <a href="https://twitter.com"><img src="twitter.svg" alt="twitter"></a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com"><img src="Facebook.png" alt="Facebook"></a>
+                        <a href="https://www.facebook.com"><img src="facebook.svg" alt="Facebook"></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com"><img src="Linkedin.png" alt="Linkedin"></a>
+                        <a href="https://www.linkedin.com"><img src="linkedin.svg" alt="Linkedin"></a>
                     </li>
                 </ul>
             </li>
@@ -171,16 +171,16 @@
                 </figure>
                 <ul>
                     <li>
-                        <a href="https://www.instagram.com"><img src="instagram.png" alt="instagram"></a>
+                        <a href="https://www.instagram.com"><img src="instagram.svg" alt="instagram"></a>
                     </li>
                     <li>
-                        <a href="https://twitter.com"><img src="twitter.png" alt="twitter"></a>
+                        <a href="https://twitter.com"><img src="twitter.svg" alt="twitter"></a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com"><img src="Facebook.png" alt="Facebook"></a>
+                        <a href="https://www.facebook.com"><img src="facebook.svg" alt="Facebook"></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com"><img src="Linkedin.png" alt="Linkedin"></a>
+                        <a href="https://www.linkedin.com"><img src="linkedin.svg" alt="Linkedin"></a>
                     </li>
                 </ul>
             </li>
@@ -188,6 +188,20 @@
                 <figure><img src="Martin Doe.png" alt="Martin Doe"> 
                     <figcaption><strong>Martin Doe</strong><br> UI Designer</figcaption>
                 </figure>
+                <ul>
+                    <li>
+                        <a href="https://www.instagram.com"><img src="instagram.svg" alt="instagram"></a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com"><img src="twitter.svg" alt="twitter"></a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com"><img src="facebook.svg" alt="Facebook"></a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com"><img src="linkedin.svg" alt="Linkedin"></a>
+                    </li>
+            </ul>
             </li>
         </ul>
     </section>
@@ -197,22 +211,22 @@
         <h2>Постоянные клиенты</h2>
         <ul>
             <li>
-                <a href=""><img src="logo 1.png" alt="logo 1.png"></a>
+                <a href=""><img src="logo 1.svg" alt="logo 1.png"></a>
             </li>
             <li>
-                <a href=""><img src="logo 2.png" alt="logo 2"></a>
+                <a href=""><img src="logo 2.svg" alt="logo 2"></a>
             </li> 
             <li>
-                <a href=""><img src="logo 3.png" alt="logo 3"></a>
+                <a href=""><img src="logo 3.svg" alt="logo 3"></a>
             </li> 
             <li>
-                <a href=""><img src="logo 4.png" alt="logo 4"></a>
+                <a href=""><img src="logo 4.svg" alt="logo 4"></a>
             </li>
             <li>
-                <a href=""><img src="logo 5.png" alt="logo 5"></a>
+                <a href=""><img src="logo 5.svg" alt="logo 5"></a>
             </li> 
             <li>
-                <a href=""><img src="logo 6.png" alt="logo 6"></a>
+                <a href=""><img src="logo 6.svg" alt="logo 6"></a>
             </li>
         </ul>
         
