--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
             </li>
             <li>
                 <img src="smartphone.svg" alt="Smartphone">
-                <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
 
     <!--Главный блок-->
     <div>
-        <img src="Header img.png" alt="Эффективные решения вашего бизнеса">
+        <img src="Headerimg.png" alt="Эффективные решения вашего бизнеса">
         <section>
         <h1>Эффективные решения вашего бизнеса</h1>
         <button>Заказать услугу</button>
@@ -63,7 +63,7 @@
     <ul>
         <li>
             <div>
-            <img src="antenna 1.png" alt="antenna">
+            <img src="antenna1.png" alt="antenna">
             </div>
             <h3>Внимание к деталям</h3>
             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -71,7 +71,7 @@
 
         <li>
             <div>
-            <img src="clock 1.png" alt="clock">
+            <img src="clock1.png" alt="clock">
             </div>
             <h3>Пунктуальность</h3>
             <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
@@ -79,7 +79,7 @@
 
         <li>
             <div>
-            <img src="diagram 1.png" alt="diagram">
+            <img src="diagram1.png" alt="diagram">
             </div>
             <h3>Планирование</h3>
             <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
@@ -87,7 +87,7 @@
 
         <li>
             <div>
-            <img src="astronaut 1.png" alt="astronaut">
+            <img src="astronaut1.png" alt="astronaut">
             </div>
             <h3>Современные технологии</h3>
             <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
@@ -127,7 +127,7 @@
         <ul>
             <li>
                 <figure>
-                    <img src="John Smith.png" alt="John Smith"> 
+                    <img src="JohnSmith.png" alt="John Smith"> 
                     <figcaption><strong>John Smith</strong><br> Product Designer</figcaption>
                 </figure>
                 <ul>
@@ -147,7 +147,7 @@
             </li>
             <li>
                 <figure>
-                    <img src="Marta Stewart.png" alt="Marta Stewart.png">
+                    <img src="MartaStewart.png" alt="Marta Stewart.png">
                     <figcaption><strong>Marta Stewart</strong><br> Frontend Developer</figcaption>
                 </figure>
                 <ul>
@@ -166,7 +166,7 @@
                 </ul>
             </li>
             <li>
-                <figure><img src="Robert Jakis.png" alt="Robert Jakis">
+                <figure><img src="RobertJakis.png" alt="Robert Jakis">
                 <figcaption><strong>Robert Jakis</strong><br> Marketing</figcaption>
                 </figure>
                 <ul>
@@ -185,7 +185,7 @@
                 </ul>
             </li>
             <li>
-                <figure><img src="Martin Doe.png" alt="Martin Doe"> 
+                <figure><img src="MartinDoe.png" alt="Martin Doe"> 
                     <figcaption><strong>Martin Doe</strong><br> UI Designer</figcaption>
                 </figure>
                 <ul>
@@ -211,22 +211,22 @@
         <h2>Постоянные клиенты</h2>
         <ul>
             <li>
-                <a href=""><img src="logo 1.svg" alt="logo 1.png"></a>
+                <a href=""><img src="logo1.svg" alt="logo 1.png"></a>
             </li>
             <li>
-                <a href=""><img src="logo 2.svg" alt="logo 2"></a>
+                <a href=""><img src="logo2.svg" alt="logo 2"></a>
             </li> 
             <li>
-                <a href=""><img src="logo 3.svg" alt="logo 3"></a>
+                <a href=""><img src="logo3.svg" alt="logo 3"></a>
             </li> 
             <li>
-                <a href=""><img src="logo 4.svg" alt="logo 4"></a>
+                <a href=""><img src="logo4.svg" alt="logo 4"></a>
             </li>
             <li>
-                <a href=""><img src="logo 5.svg" alt="logo 5"></a>
+                <a href=""><img src="logo5.svg" alt="logo 5"></a>
             </li> 
             <li>
-                <a href=""><img src="logo 6.svg" alt="logo 6"></a>
+                <a href=""><img src="logo6.svg" alt="logo 6"></a>
             </li>
         </ul>
         
