--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         <!--Связь-->
         <ul>
             <li>
-                <img src="envelope.svg" alt="Email">
+                <img src="images/contacts/envelope.svg" alt="Email">
                 <a href="mailto:info@devstudio.com">
                     mailto:info@devstudio.com
                 </a>
             </li>
             <li>
-                <img src="smartphone.svg" alt="Smartphone">
+                <img src="images/contacts/smartphone.svg" alt="Smartphone">
                 <a href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
@@ -51,7 +51,7 @@
 
     <!--Главный блок-->
     <div>
-        <img src="Headerimg.png" alt="Эффективные решения вашего бизнеса">
+        <img src="images/Headerimg.png" alt="Эффективные решения вашего бизнеса">
         <section>
         <h1>Эффективные решения вашего бизнеса</h1>
         <button>Заказать услугу</button>
@@ -63,7 +63,7 @@
     <ul>
         <li>
             <div>
-            <img src="antenna1.png" alt="antenna">
+            <img src="images/Features/antenna1.png" alt="antenna">
             </div>
             <h3>Внимание к деталям</h3>
             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -71,7 +71,7 @@
 
         <li>
             <div>
-            <img src="clock1.png" alt="clock">
+            <img src="images/Features/clock1.png" alt="clock">
             </div>
             <h3>Пунктуальность</h3>
             <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
@@ -79,7 +79,7 @@
 
         <li>
             <div>
-            <img src="diagram1.png" alt="diagram">
+            <img src="images/Features/diagram1.png" alt="diagram">
             </div>
             <h3>Планирование</h3>
             <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
@@ -87,7 +87,7 @@
 
         <li>
             <div>
-            <img src="astronaut1.png" alt="astronaut">
+            <img src="images/Features/astronaut1.png" alt="astronaut">
             </div>
             <h3>Современные технологии</h3>
             <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
@@ -102,20 +102,20 @@
         <li>
             <h3>Десктопные приложения</h3>
             <div>
-                <img src="img1.png" alt="Десктопные приложения">
+                <img src="images/portfolio/img1.png" alt="Десктопные приложения">
             </div>
         </li>
 
         <li>
             <h3>Мобильные приложения</h3>
             <div>
-                <img src="img2.png" alt="Мобильные приложения">
+                <img src="images/portfolio/img2.png" alt="Мобильные приложения">
             </div>
         </li>
 
         <li>
             <h3>Дизайнерские решения</h3>
-            <div><img src="img3.png" alt="Дизайнерские решения">
+            <div><img src="images/portfolio/img3.png" alt="Дизайнерские решения">
             </div>
         </li>
     </ul>
@@ -127,79 +127,79 @@
         <ul>
             <li>
                 <figure>
-                    <img src="JohnSmith.png" alt="John Smith"> 
+                    <img src="images/Team/JohnSmith.png" alt="John Smith"> 
                     <figcaption><strong>John Smith</strong><br> Product Designer</figcaption>
                 </figure>
                 <ul>
                     <li>
-                        <a href="https://www.instagram.com"><img src="instagram.svg" alt="instagram"></a>
+                        <a href="https://www.instagram.com"><img src="images/Social links/instagram.svg" alt="instagram"></a>
                     </li>
                     <li>
-                        <a href="https://twitter.com"><img src="twitter.svg" alt="twitter"></a>
+                        <a href="https://twitter.com"><img src="images/Social links/twitter.svg" alt="twitter"></a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com"><img src="facebook.svg" alt="Facebook"></a>
+                        <a href="https://www.facebook.com"><img src="images/Social links/facebook.svg" alt="Facebook"></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com"><img src="linkedin.svg" alt="Linkedin"></a>
+                        <a href="https://www.linkedin.com"><img src="images/Social links/linkedin.svg" alt="Linkedin"></a>
                     </li>
                 </ul>
             </li>
             <li>
                 <figure>
-                    <img src="MartaStewart.png" alt="Marta Stewart.png">
+                    <img src="images/Team/MartaStewart.png" alt="Marta Stewart.png">
                     <figcaption><strong>Marta Stewart</strong><br> Frontend Developer</figcaption>
                 </figure>
                 <ul>
                     <li>
-                        <a href="https://www.instagram.com"><img src="instagram.svg" alt="instagram"></a>
+                        <a href="https://www.instagram.com"><img src="images/Social links/instagram.svg" alt="instagram"></a>
                     </li>
                     <li>
-                        <a href="https://twitter.com"><img src="twitter.svg" alt="twitter"></a>
+                        <a href="https://twitter.com"><img src="images/Social links/twitter.svg" alt="twitter"></a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com"><img src="facebook.svg" alt="Facebook"></a>
+                        <a href="https://www.facebook.com"><img src="images/Social links/facebook.svg" alt="Facebook"></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com"><img src="linkedin.svg" alt="Linkedin"></a>
+                        <a href="https://www.linkedin.com"><img src="images/Social links/linkedin.svg" alt="Linkedin"></a>
                     </li>
                 </ul>
             </li>
             <li>
-                <figure><img src="RobertJakis.png" alt="Robert Jakis">
+                <figure><img src="images/Team/RobertJakis.png" alt="Robert Jakis">
                 <figcaption><strong>Robert Jakis</strong><br> Marketing</figcaption>
                 </figure>
                 <ul>
                     <li>
-                        <a href="https://www.instagram.com"><img src="instagram.svg" alt="instagram"></a>
+                        <a href="https://www.instagram.com"><img src="images/Social links/instagram.svg" alt="instagram"></a>
                     </li>
                     <li>
-                        <a href="https://twitter.com"><img src="twitter.svg" alt="twitter"></a>
+                        <a href="https://twitter.com"><img src="images/Social links/twitter.svg" alt="twitter"></a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com"><img src="facebook.svg" alt="Facebook"></a>
+                        <a href="https://www.facebook.com"><img src="images/Social links/facebook.svg" alt="Facebook"></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com"><img src="linkedin.svg" alt="Linkedin"></a>
+                        <a href="https://www.linkedin.com"><img src="images/Social links/linkedin.svg" alt="Linkedin"></a>
                     </li>
                 </ul>
             </li>
             <li>
-                <figure><img src="MartinDoe.png" alt="Martin Doe"> 
+                <figure><img src="images/Team/MartinDoe.png" alt="Martin Doe"> 
                     <figcaption><strong>Martin Doe</strong><br> UI Designer</figcaption>
                 </figure>
                 <ul>
                     <li>
-                        <a href="https://www.instagram.com"><img src="instagram.svg" alt="instagram"></a>
+                        <a href="https://www.instagram.com"><img src="images/Social links/instagram.svg" alt="instagram"></a>
                     </li>
                     <li>
-                        <a href="https://twitter.com"><img src="twitter.svg" alt="twitter"></a>
+                        <a href="https://twitter.com"><img src="images/Social links/twitter.svg" alt="twitter"></a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com"><img src="facebook.svg" alt="Facebook"></a>
+                        <a href="https://www.facebook.com"><img src="images/Social links/facebook.svg" alt="Facebook"></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com"><img src="linkedin.svg" alt="Linkedin"></a>
+                        <a href="https://www.linkedin.com"><img src="images/Social links/linkedin.svg" alt="Linkedin"></a>
                     </li>
             </ul>
             </li>
@@ -211,25 +211,57 @@
         <h2>Постоянные клиенты</h2>
         <ul>
             <li>
-                <a href=""><img src="logo1.svg" alt="logo 1.png"></a>
+                <a href=""><img src="images/Clients/logo1.svg" alt="logo 1.png"></a>
             </li>
             <li>
-                <a href=""><img src="logo2.svg" alt="logo 2"></a>
+                <a href=""><img src="images/Clients/logo2.svg" alt="logo 2"></a>
             </li> 
             <li>
-                <a href=""><img src="logo3.svg" alt="logo 3"></a>
+                <a href=""><img src="images/Clients/logo3.svg" alt="logo 3"></a>
             </li> 
             <li>
-                <a href=""><img src="logo4.svg" alt="logo 4"></a>
+                <a href=""><img src="images/Clients/logo4.svg" alt="logo 4"></a>
             </li>
             <li>
-                <a href=""><img src="logo5.svg" alt="logo 5"></a>
+                <a href=""><img src="images/Clients/logo5.svg" alt="logo 5"></a>
             </li> 
             <li>
-                <a href=""><img src="logo6.svg" alt="logo 6"></a>
+                <a href=""><img src="images/Clients/logo6.svg" alt="logo 6"></a>
             </li>
         </ul>
         
+    </section>
+    <!--Footer-->
+    <section>
+        <section>
+        <a href="/">Web Studio</a> 
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <p>info@example.com</p>
+        <p>+38 099 111 11 11</p>
+        </section>
+        <section>
+            <p>присоединяйтесь</p>
+            <ul>
+                <li>
+                    <a href="https://www.instagram.com"><img src="images/Social links/instagram.svg" alt="instagram"></a>
+                </li>
+                <li>
+                    <a href="https://twitter.com"><img src="images/Social links/twitter.svg" alt="twitter"></a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com"><img src="images/Social links/facebook.svg" alt="Facebook"></a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com"><img src="images/Social links/linkedin.svg" alt="Linkedin"></a>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <p>подписаться на рассылку</p>
+            <input type="E-mail">
+            <button>Подписаться</button>
+            <p>2020 | Developed by GoIT Students </p>
+        </section>
     </section>
 </body>
 </html>
