--- a/index.html
+++ b/index.html
@@ -132,16 +132,16 @@
                 </figure>
                 <ul>
                     <li>
-                        <a href="https://www.instagram.com"><img src="images/Social links/instagram.svg" alt="instagram"></a>
+                        <a href="https://www.instagram.com"><img src="images/Social_links/instagram.svg" alt="instagram"></a>
                     </li>
                     <li>
-                        <a href="https://twitter.com"><img src="images/Social links/twitter.svg" alt="twitter"></a>
+                        <a href="https://twitter.com"><img src="images/Social_links/twitter.svg" alt="twitter"></a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com"><img src="images/Social links/facebook.svg" alt="Facebook"></a>
+                        <a href="https://www.facebook.com"><img src="images/Social_links/facebook.svg" alt="Facebook"></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com"><img src="images/Social links/linkedin.svg" alt="Linkedin"></a>
+                        <a href="https://www.linkedin.com"><img src="images/Social_links/linkedin.svg" alt="Linkedin"></a>
                     </li>
                 </ul>
             </li>
@@ -152,16 +152,16 @@
                 </figure>
                 <ul>
                     <li>
-                        <a href="https://www.instagram.com"><img src="images/Social links/instagram.svg" alt="instagram"></a>
+                        <a href="https://www.instagram.com"><img src="images/Social_links/instagram.svg" alt="instagram"></a>
                     </li>
                     <li>
-                        <a href="https://twitter.com"><img src="images/Social links/twitter.svg" alt="twitter"></a>
+                        <a href="https://twitter.com"><img src="images/Social_links/twitter.svg" alt="twitter"></a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com"><img src="images/Social links/facebook.svg" alt="Facebook"></a>
+                        <a href="https://www.facebook.com"><img src="images/Social_links/facebook.svg" alt="Facebook"></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com"><img src="images/Social links/linkedin.svg" alt="Linkedin"></a>
+                        <a href="https://www.linkedin.com"><img src="images/Social_links/linkedin.svg" alt="Linkedin"></a>
                     </li>
                 </ul>
             </li>
@@ -171,16 +171,16 @@
                 </figure>
                 <ul>
                     <li>
-                        <a href="https://www.instagram.com"><img src="images/Social links/instagram.svg" alt="instagram"></a>
+                        <a href="https://www.instagram.com"><img src="images/Social_links/instagram.svg" alt="instagram"></a>
                     </li>
                     <li>
-                        <a href="https://twitter.com"><img src="images/Social links/twitter.svg" alt="twitter"></a>
+                        <a href="https://twitter.com"><img src="images/Social_links/twitter.svg" alt="twitter"></a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com"><img src="images/Social links/facebook.svg" alt="Facebook"></a>
+                        <a href="https://www.facebook.com"><img src="images/Social_links/facebook.svg" alt="Facebook"></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com"><img src="images/Social links/linkedin.svg" alt="Linkedin"></a>
+                        <a href="https://www.linkedin.com"><img src="images/Social_links/linkedin.svg" alt="Linkedin"></a>
                     </li>
                 </ul>
             </li>
@@ -190,16 +190,16 @@
                 </figure>
                 <ul>
                     <li>
-                        <a href="https://www.instagram.com"><img src="images/Social links/instagram.svg" alt="instagram"></a>
+                        <a href="https://www.instagram.com"><img src="images/Social_links/instagram.svg" alt="instagram"></a>
                     </li>
                     <li>
-                        <a href="https://twitter.com"><img src="images/Social links/twitter.svg" alt="twitter"></a>
+                        <a href="https://twitter.com"><img src="images/Social_links/twitter.svg" alt="twitter"></a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com"><img src="images/Social links/facebook.svg" alt="Facebook"></a>
+                        <a href="https://www.facebook.com"><img src="images/Social_links/facebook.svg" alt="Facebook"></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com"><img src="images/Social links/linkedin.svg" alt="Linkedin"></a>
+                        <a href="https://www.linkedin.com"><img src="images/Social_links/linkedin.svg" alt="Linkedin"></a>
                     </li>
             </ul>
             </li>
@@ -232,36 +232,31 @@
         
     </section>
     <!--Footer-->
-    <section>
-        <section>
-        <a href="/">Web Studio</a> 
+    <footer>
+        <p><a href="/">Web Studio</a></p>
         <p>г. Киев, пр-т Леси Украинки, 26</p>
         <p>info@example.com</p>
         <p>+38 099 111 11 11</p>
-        </section>
-        <section>
-            <p>присоединяйтесь</p>
+        
+         <p>присоединяйтесь</p>
             <ul>
                 <li>
-                    <a href="https://www.instagram.com"><img src="images/Social links/instagram.svg" alt="instagram"></a>
+                    <a href="https://www.instagram.com"><img src="images/Social_links/instagram.svg" alt="instagram"></a>
                 </li>
                 <li>
-                    <a href="https://twitter.com"><img src="images/Social links/twitter.svg" alt="twitter"></a>
+                    <a href="https://twitter.com"><img src="images/Social_links/twitter.svg" alt="twitter"></a>
                 </li>
                 <li>
-                    <a href="https://www.facebook.com"><img src="images/Social links/facebook.svg" alt="Facebook"></a>
+                    <a href="https://www.facebook.com"><img src="images/Social_links/facebook.svg" alt="Facebook"></a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com"><img src="images/Social links/linkedin.svg" alt="Linkedin"></a>
+                    <a href="https://www.linkedin.com"><img src="images/Social_links/linkedin.svg" alt="Linkedin"></a>
                 </li>
             </ul>
-        </section>
-        <section>
-            <p>подписаться на рассылку</p>
-            <input type="E-mail">
-            <button>Подписаться</button>
-            <p>2020 | Developed by GoIT Students </p>
-        </section>
-    </section>
+                <p>подписаться на рассылку</p>
+                <input type="text">
+                <button>Подписаться</button>
+                <p>2020 | Developed by GoIT Students </p>
+    </footer>
 </body>
 </html>
