работа над дз 1
Сделал альт на русском

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <ul>
         <li>
             <div>
-            <img src="./images/Features/antenna1.svg" alt="antenna" width="70" height="70">
+            <img src="./images/Features/antenna1.svg" alt="антена" width="70" height="70">
             </div>
             <h3>Внимание к деталям</h3>
             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -74,7 +74,7 @@
 
         <li>
             <div>
-            <img src="./images/Features/clock1.png" alt="clock" width="70" height="70">
+            <img src="./images/Features/clock1.png" alt="часы" width="70" height="70">
             </div>
             <h3>Пунктуальность</h3>
             <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
@@ -82,7 +82,7 @@
 
         <li>
             <div>
-            <img src="./images/Features/diagram1.png" alt="diagram" width="70" height="70">
+            <img src="./images/Features/diagram1.png" alt="диаграмма" width="70" height="70">
             </div>
             <h3>Планирование</h3>
             <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
@@ -90,7 +90,7 @@
 
         <li>
             <div>
-            <img src="./images/Features/astronaut1.png" alt="astronaut" width="70" height="70">
+            <img src="./images/Features/astronaut1.png" alt="астронавт" width="70" height="70">
             </div>
             <h3>Современные технологии</h3>
             <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
@@ -130,79 +130,79 @@
         <ul>
             <li>
                 <figure>
-                    <img src="./images/Team/JohnSmith.png" alt="John Smith" width="278" height="260"> 
+                    <img src="./images/Team/JohnSmith.png" alt="Джон Смит" width="278" height="260"> 
                     <figcaption><strong>John Smith</strong><br> Product Designer</figcaption>
                 </figure>
                 <ul>
                     <li>
-                        <a href="https://www.instagram.com"><img src="./images/social-links/instagram.svg" alt="instagram"></a>
+                        <a href="https://www.instagram.com"><img src="./images/social-links/instagram.svg" alt="инстаграм"></a>
                     </li>
                     <li>
-                        <a href="https://twitter.com"><img src="./images/social-links/twitter.svg" alt="twitter"></a>
+                        <a href="https://twitter.com"><img src="./images/social-links/twitter.svg" alt="твиттер"></a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com"><img src="./images/social-links/facebook.svg" alt="Facebook"></a>
+                        <a href="https://www.facebook.com"><img src="./images/social-links/facebook.svg" alt="фейсбук"></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com"><img src="./images/social-links/linkedin.svg" alt="Linkedin"></a>
+                        <a href="https://www.linkedin.com"><img src="./images/social-links/linkedin.svg" alt="Линкедин"></a>
                     </li>
                 </ul>
             </li>
             <li>
                 <figure>
-                    <img src="images/Team/MartaStewart.png" alt="Marta Stewart.png" width="278" height="260">
+                    <img src="images/Team/MartaStewart.png" alt="Марта Стюарт.png" width="278" height="260">
                     <figcaption><strong>Marta Stewart</strong><br> Frontend Developer</figcaption>
                 </figure>
                 <ul>
                     <li>
-                        <a href="https://www.instagram.com"><img src="./images/social-links/instagram.svg" alt="instagram"></a>
+                        <a href="https://www.instagram.com"><img src="./images/social-links/instagram.svg" alt="инстаграм"></a>
                     </li>
                     <li>
-                        <a href="https://twitter.com"><img src="./images/social-links/twitter.svg" alt="twitter"></a>
+                        <a href="https://twitter.com"><img src="./images/social-links/twitter.svg" alt="твиттер"></a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com"><img src="./images/social-links/facebook.svg" alt="Facebook"></a>
+                        <a href="https://www.facebook.com"><img src="./images/social-links/facebook.svg" alt="фейсбук"></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com"><img src="./images/social-links/linkedin.svg" alt="Linkedin"></a>
+                        <a href="https://www.linkedin.com"><img src="./images/social-links/linkedin.svg" alt="Линкедин"></a>
                     </li>
                 </ul>
             </li>
             <li>
-                <figure><img src="images/Team/RobertJakis.png" alt="Robert Jakis" width="278" height="260">
+                <figure><img src="images/Team/RobertJakis.png" alt="Робер Джекис" width="278" height="260">
                 <figcaption><strong>Robert Jakis</strong><br> Marketing</figcaption>
                 </figure>
                 <ul>
                     <li>
-                        <a href="https://www.instagram.com"><img src="./images/social-links/instagram.svg" alt="instagram"></a>
+                        <a href="https://www.instagram.com"><img src="./images/social-links/instagram.svg" alt="инстаграм"></a>
                     </li>
                     <li>
-                        <a href="https://twitter.com"><img src="./images/social-links/twitter.svg" alt="twitter"></a>
+                        <a href="https://twitter.com"><img src="./images/social-links/twitter.svg" alt="твиттер"></a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com"><img src="./images/social-links/facebook.svg" alt="Facebook"></a>
+                        <a href="https://www.facebook.com"><img src="./images/social-links/facebook.svg" alt="фейсбук"></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com"><img src="./images/social-links/linkedin.svg" alt="Linkedin"></a>
+                        <a href="https://www.linkedin.com"><img src="./images/social-links/linkedin.svg" alt="Линкедин"></a>
                     </li>
                 </ul>
             </li>
             <li>
-                <figure><img src="images/Team/MartinDoe.png" alt="Martin Doe" width="278" height="260"> 
+                <figure><img src="images/Team/MartinDoe.png" alt="Мартин До" width="278" height="260"> 
                     <figcaption><strong>Martin Doe</strong><br> UI Designer</figcaption>
                 </figure>
                 <ul>
                     <li>
-                        <a href="https://www.instagram.com"><img src="./images/social-links/instagram.svg" alt="instagram"></a>
+                        <a href="https://www.instagram.com"><img src="./images/social-links/instagram.svg" alt="инстаграм"></a>
                     </li>
                     <li>
-                        <a href="https://twitter.com"><img src="./images/social-links/twitter.svg" alt="twitter"></a>
+                        <a href="https://twitter.com"><img src="./images/social-links/twitter.svg" alt="твиттер"></a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com"><img src="./images/social-links/facebook.svg" alt="Facebook"></a>
+                        <a href="https://www.facebook.com"><img src="./images/social-links/facebook.svg" alt="фейсбук"></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com"><img src="./images/social-links/linkedin.svg" alt="Linkedin"></a>
+                        <a href="https://www.linkedin.com"><img src="./images/social-links/linkedin.svg" alt="Линкедин"></a>
                     </li>
             </ul>
             </li>
@@ -214,16 +214,17 @@
         <h2>Постоянные клиенты</h2>
         <ul>
             <li>
-                <a href="https://www.instagram.com"><img src="./images/social-links/instagram.svg" alt="instagram"></a>
+                <a href="https://www.instagram.com"><img src="./images/social-links/instagram.svg" alt="инстаграм"></a>
             </li>
             <li>
-                <a href="https://twitter.com"><img src="./images/social-links/twitter.svg" alt="twitter"></a>
+                <a href="https://twitter.com"><img src="./images/social-links/twitter.svg" alt="твиттер"></a>
             </li>
             <li>
-                <a href="https://www.facebook.com"><img src="./images/social-links/facebook.svg" alt="Facebook"></a>
+                <a href="https://www.facebook.com"><img src="./images/social-links/facebook.svg" alt="фейсбук"></a>
             </li>
             <li>
-                <a href="https://www.linkedin.com"><img src="./images/social-links/linkedin.svg" alt="Linkedin"></a>
+                <a href="https://www.linkedin.com"><img src="./images/social-links/linkedin.svg" alt="Линкедин"></a>
+            </li>
             </li>
         </ul>
         
@@ -241,16 +242,17 @@
             <p>присоединяйтесь</p>
             <ul>
                 <li>
-                    <a href="https://www.instagram.com"><img src="./images/social-links/instagram.svg" alt="instagram"></a>
+                    <a href="https://www.instagram.com"><img src="./images/social-links/instagram.svg" alt="инстаграм"></a>
                 </li>
                 <li>
-                    <a href="https://twitter.com"><img src="./images/social-links/twitter.svg" alt="twitter"></a>
+                    <a href="https://twitter.com"><img src="./images/social-links/twitter.svg" alt="твиттер"></a>
                 </li>
                 <li>
-                    <a href="https://www.facebook.com"><img src="./images/social-links/facebook.svg" alt="Facebook"></a>
+                    <a href="https://www.facebook.com"><img src="./images/social-links/facebook.svg" alt="фейсбук"></a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com"><img src="./images/social-links/linkedin.svg" alt="Linkedin"></a>
+                    <a href="https://www.linkedin.com"><img src="./images/social-links/linkedin.svg" alt="Линкедин"></a>
+                </li>
                 </li>
             </ul>
          </div>
