--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <li>
                 <figure>
                     <img src="./images/Team/JohnSmith.png" alt="Джон Смит" width="278" height="260"> 
-                    <figcaption><strong>John Smith</strong><br> Product Designer</figcaption>
+                    <figcaption><h3>John Smith</h3><p>Product Designer</p></figcaption>
                 </figure>
                 <ul>
                     <li>
@@ -151,7 +151,7 @@
             <li>
                 <figure>
                     <img src="images/Team/MartaStewart.png" alt="Марта Стюарт.png" width="278" height="260">
-                    <figcaption><strong>Marta Stewart</strong><br> Frontend Developer</figcaption>
+                    <figcaption><h3>Marta Stewart</h3><p>Frontend Developer</p></figcaption>
                 </figure>
                 <ul>
                     <li>
@@ -170,7 +170,7 @@
             </li>
             <li>
                 <figure><img src="images/Team/RobertJakis.png" alt="Робер Джекис" width="278" height="260">
-                <figcaption><strong>Robert Jakis</strong><br> Marketing</figcaption>
+                <figcaption><h3>Robert Jakis</h3><p>Marketing</p></figcaption>
                 </figure>
                 <ul>
                     <li>
@@ -189,7 +189,7 @@
             </li>
             <li>
                 <figure><img src="images/Team/MartinDoe.png" alt="Мартин До" width="278" height="260"> 
-                    <figcaption><strong>Martin Doe</strong><br> UI Designer</figcaption>
+                    <figcaption><h3>Martin Doe</h3><p>UI Designer</p></figcaption>
                 </figure>
                 <ul>
                     <li>
