--- a/index.html
+++ b/index.html
@@ -214,17 +214,21 @@
         <h2>Постоянные клиенты</h2>
         <ul>
             <li>
-                <a href="https://www.instagram.com"><img src="./images/social-links/instagram.svg" alt="инстаграм"></a>
+                <a href=""><img src="./images/Clients/logo1.svg" alt="клиент1"></a>
             </li>
             <li>
-                <a href="https://twitter.com"><img src="./images/social-links/twitter.svg" alt="твиттер"></a>
+                <a href=""><img src="./images/Clients/logo2.svg" alt="клиент2"></a>
             </li>
             <li>
-                <a href="https://www.facebook.com"><img src="./images/social-links/facebook.svg" alt="фейсбук"></a>
+                <a href=""><img src="./images/Clients/logo3.svg" alt="клиент3"></a>
             </li>
             <li>
-                <a href="https://www.linkedin.com"><img src="./images/social-links/linkedin.svg" alt="Линкедин"></a>
+                <a href=""><img src="./images/Clients/logo4.svg" alt="клиент4"></a>
             </li>
+                <a href=""><img src="./images/Clients/logo5.svg" alt="клиент5"></a>
+            </li>
+            <li>
+                <a href=""><img src="./images/Clients/logo6.svg" alt="клиент6"></a>
             </li>
         </ul>
         
