работа над дз6-7
убрал абзац из ссылки Лого
телефоны и почту сделал ссылками

--- a/index.html
+++ b/index.html
@@ -236,9 +236,11 @@
     <!--Footer-->
     <footer>
         <div>
-            <p><a href="/">Web Studio</a></p>
+            <a href="/">Web Studio</a>
             <address>
-            <p>г. Киев, пр-т Леси Украинки, 26 <br/> info@example.com <br/> +38 099 111 11 11</p>
+            <p>г. Киев, пр-т Леси Украинки, 26 </p>
+            <a href="mailto:info@example.com">info@example.com</a>
+            <a href="tel:+380991111111">+38 099 111 11 11</a>
             </address>
         </div>
                 
