Работа над дз 3
заменил кнопку на ссылку

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div>
                 <!--Фон-->
             </div>
-            <button>Заказать услугу</button>
+            <a href="">Заказать услугу</a>
         </section>
 
     <!--Наши Особенности-->
