--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         <li>
             <div>
-            <img src="./images/Features/clock1.png" alt="часы" width="70" height="70">
+            <img src="./images/Features/clock1.svg" alt="часы" width="70" height="70">
             </div>
             <h3>Пунктуальность</h3>
             <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
@@ -82,7 +82,7 @@
 
         <li>
             <div>
-            <img src="./images/Features/diagram1.png" alt="диаграмма" width="70" height="70">
+            <img src="./images/Features/diagram1.svg" alt="диаграмма" width="70" height="70">
             </div>
             <h3>Планирование</h3>
             <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
@@ -90,7 +90,7 @@
 
         <li>
             <div>
-            <img src="./images/Features/astronaut1.png" alt="астронавт" width="70" height="70">
+            <img src="./images/Features/astronaut1.svg" alt="астронавт" width="70" height="70">
             </div>
             <h3>Современные технологии</h3>
             <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
