--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <ul>
         <li>
             <div>
-            <img src="./images/Features/антена1.png" alt="антена" width="70" height="70">
+            <img src="./images/Features/antenna.png" alt="антена" width="70" height="70">
             </div>
             <h3>Внимание к деталям</h3>
             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
