--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <ul>
         <li>
             <div>
-            <img src="./images/Features/antenna.png" alt="антена" width="70" height="70">
+            <img src="./images/Features/antenna1.svg" alt="антена" width="70" height="70">
             </div>
             <h3>Внимание к деталям</h3>
             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -225,9 +225,10 @@
             <li>
                 <a href=""><img src="./images/Clients/logo4.svg" alt="клиент4"></a>
             </li>
+            <li>
                 <a href=""><img src="./images/Clients/logo5.svg" alt="клиент5"></a>
             </li>
-            <li>
+           <li>
                 <a href=""><img src="./images/Clients/logo6.svg" alt="клиент6"></a>
             </li>
         </ul>
@@ -258,7 +259,6 @@
                 </li>
                 <li>
                     <a href="https://www.linkedin.com"><img src="./images/social-links/linkedin.svg" alt="Линкедин"></a>
-                </li>
                 </li>
             </ul>
          </div>
